--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="highscore">Highscore</string>
     <string name="feedback">Feedback</string>
     <string name="about">About</string>
+    <string name="add_section">Add section</string>
+    <string name="add_lecture">Add lecture</string>
 </resources>
