--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,15 @@
     <string name="Feedback">Feedback</string>
     <string name="About">About</string>
     <string name="about_us">About Us</string>
+    <string name="about_text">Nurses lecture room is a platform that is created to help
+    student get easy access to lecture note, past questions and also tips on how to answer
+    nursing council past questions.</string>
+    <string name="mission">Our mission is to ensure that nursing students study daily to improve
+    their knowledge and be better equipped to be able to state their rationale behind their action
+    with the lecture notes on the application.</string>
+    <string name="vision">Our vision is to ensure students pass their professionals exams with our
+    lecture notes and past questions.</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
